crates/rustyray-macros/tests/ui/fail/actor_methods_on_trait.stderr
error: #[actor_methods] must be used on inherent impl blocks, not trait implementations
  --> tests/ui/fail/actor_methods_on_trait.rs:14:1
   |
14 | / impl MyTrait for MyActor {
15 | |     fn get_value(&self) -> i32 {
16 | |         self.value
17 | |     }
18 | | }
   | |_^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `serde`
 --> tests/ui/fail/actor_methods_on_trait.rs:3:1
  |
3 | #[rustyray::actor]
  | ^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `serde`
  |
  = note: this error originates in the attribute macro `rustyray::actor` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `rustyray::prelude::*`
 --> tests/ui/fail/actor_methods_on_trait.rs:1:5
  |
1 | use rustyray::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
